--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,9 @@
 spring.application.name=mycoolapp
-
-management.endpoints.web.exposure.include=health,info
+#Use wildcard "*" to expose all endpoints
+#Can also expose individual endpoints with a coma-delimited list
+management.endpoints.web.exposure.include=*
 management.info.env.enabled=true
+
+info.app.name=My Super Cool App
+info.app.description=A crazy fun app, yoohoo!
+info.app.version=1.0.0
